--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -23,8 +23,8 @@
                 </div>
                 <input type="number" id="intentoDeUsuario" min="1" max="10" class="container__input">
                 <div class="chute container__botones">
-                    <button onclick="verificarIntento();" class="container__boton">Intentar</button>
-                    <button onclick="reiniciarJuego();" class="container__boton" id="reiniciar" disabled>Nuevo juego</button>
+                    <button onclick="verify();" class="container__boton">Try</button>
+                    <button onclick="resetGame();" class="container__boton" id="reiniciar" disabled>New Game</button>
                 </div>
             </div>
         </div>
